@@ -1,4 +1,6 @@
 DIST noobjuice-viewer-0.1.tgz 40390 RMD160 25f40972a27b0053726c7e352fafd737b2838e90 SHA1 b45f42b9acca45b8a048e611fbf31516a17204dc SHA256 1cc21f3b2270aa5656034fa28dbcd15a0fb04c6c530d105c9b1cce25112d2d29
+DIST noobjuice-viewer-0.2.tgz 149973 RMD160 39455e426716cb401515d76adf5aa6f9487820ce SHA1 f8d652b2874e6d5d4651c34b7d0818566715cb7a SHA256 a3907e78dd7569530e53cfb3472e9897a3326119b724b206fecd3f1a0f146d48
 EBUILD noobjuice-viewer-0.1.ebuild 611 RMD160 464bfed333c317b7c105bb51370ba1d39ca3e736 SHA1 441980e3d8efb17b84863482e07b383afbc5cf03 SHA256 710c9a17df3cce18a0a0e124204ea00516436e9b50641e43f78fdf362bd3afc2
-MISC ChangeLog 433 RMD160 4460c644154b4cd21a586fc514832ec651b43b84 SHA1 50d757ce987d5c5a714cf6d0dafce34328aed959 SHA256 b5183ef7690db3624ed5a6dff66b8275896ec83f2ee9040c86c1f853ef6f83d0
+EBUILD noobjuice-viewer-0.2.ebuild 668 RMD160 82eae17b3f1dfc5522a300b896fe885123dbe4ec SHA1 4b9c2845e955a17763553fc6110af209c9aeafb8 SHA256 05b810549e5586e61c36e5aa36dec6850171d57b779540a28a2babfe82ec2d60
+MISC ChangeLog 594 RMD160 d4a1185526597ac2ff855adf1eaf730d9bae978f SHA1 68073a9f6a47b34cbb86351a1159dd14ed19c7e5 SHA256 a9be0bd49c50a4195e683fbb2d3506758a6b5ca17db0e0d33325a6e41e47acf5
 MISC metadata.xml 315 RMD160 baa6d96f67ef94c682334afd63a2235e65d542c3 SHA1 872384da26b813a823c4c76561f53b7d8719c6b5 SHA256 4f44ef7a08c9255f8fe6f4e3881716cc4f52b0c8cd4550b89277b22056984faa
